<resources>
    <string name="app_name">CarForAll</string>
    <string name="join_icon">join to our members</string>
    <string name="car">Car</string>
    <string name="fortxt">F</string>
    <string name="fortxt2">r</string>
    <string name="all">All</string>
    <string name="join">Join Our Members</string>
    <string name="addcar">Add Your Car</string>
    <string name="bookcar">Book A Car</string>
    <string name="title_activity_car_form">carForm</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="report">Report</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="username">UserName</string>
    <string name="username2">username</string>
    <string name="password">Password</string>
    <string name="newUser">New User?</string>
    <string name="signup">SignUp</string>
    <string name="from">Fr</string>
    <string name="from2">m</string>
    <string name="to">T</string>
    <string name="firstToast">youre signed in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Filters">Filters:</string>
    <string name="title_activity_ask_car">AskCar</string>
    <string name="transmission">Transmission:</string>
    <string name="m">M</string>
    <string name="a">A</string>
    <string name="Steptroinic">Steptroinic</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="Registrationnumber">Registration number</string>
    <string name="Buildyear">Build year</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="Return">Return The Car</string>
    <string name="Return1">Return</string>
    <string name="back">Back</string>
    <string name="problem">Need to repair the car?</string>
    <string name="kind">Kind Of The Repair:</string>
    <string name="explain">Explain</string>
    <string name="MASteptroinic">M/A/Steptroinic</string>
    <string name="add">Adress</string>
    <string name="show">Show Cars</string>
    <string name="Delete">Delete car</string>
    <string name="Edit">Edit car</string>
</resources>