<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040C51"
    android:orientation="vertical"
    tools:context=".ReportFragment">

    <ImageButton
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/report"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/transtext"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="14dp"
        android:text="@string/Return"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_gravity="center" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/Return1"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="489dp">

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            app:layout_column="0"
            app:layout_row="6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/problem"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/kind"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="259dp"
                android:layout_height="76dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/kind" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="177dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/fonts"
            android:text="@string/explain"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="4" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="163dp"
            app:layout_column="0"
            app:layout_row="5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:hint="@string/explain" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>