<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/submit_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040C51"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/backbtn"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Cars Detailes"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:hint="name" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/transtext"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:text="@string/transmission"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="0" />

        <RadioGroup
            android:layout_width="231dp"
            android:layout_height="match_parent"
            app:layout_column="1"
            app:layout_row="0">

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Steptroinic"
                android:textColor="@color/white" />
        </RadioGroup>

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="91dp"
            android:layout_height="60dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/brand" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brand_input"
                android:layout_width="229dp"
                android:layout_height="55dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/brand" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/calendar" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="230dp"
                android:layout_height="56dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/model" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_input"
                android:layout_width="232dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Registrationnumber" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/build_input"
                android:layout_width="231dp"
                android:layout_height="54dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Buildyear" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input"
                android:layout_width="232dp"
                android:layout_height="54dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/PhoneNumber" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            app:layout_column="1"
            app:layout_row="5" />

    </androidx.gridlayout.widget.GridLayout>


</LinearLayout>