<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#182058"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageView
            android:layout_width="163.7dp"
            android:layout_height="148.7dp"
            android:layout_gravity="center"
            android:layout_marginTop="21.7dp"
            app:srcCompat="@drawable/rent_a_car" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26.7dp">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="312.3dp"
                    android:layout_marginLeft="30.3dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/white_rounded_corner"
                    android:orientation="vertical"
                    android:paddingLeft="16dp">

                    <TextView
                        android:id="@+id/textview_login"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="#000000"
                        android:textSize="23.3sp" />


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="224dp"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="#000000" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_input"
                        android:layout_width="265dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:maxLines="1"
                        android:text="@string/username2"
                        android:textColor="#B1B3B6"
                        android:textColorHint="#807A7A"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="265dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="6.7dp"
                        android:layout_marginRight="17.3dp"
                        android:background="#9e9e9e" />


                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="#000000" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="263dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:maxLines="1"
                        android:text="@string/password"
                        android:textColor="#B1B3B6"
                        android:textColorHint="#807A7A"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="17.3dp"
                        android:orientation="horizontal" />


                </LinearLayout>


            </FrameLayout>

            <View
                android:layout_width="7dp"
                android:layout_height="33dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="21.7dp"
                android:background="@drawable/rounded_corner" />


            <ImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="80dp"
                android:src="@drawable/circle_arrow" />


        </FrameLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="68dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="120dp"
            android:layout_height="31dp"
            android:layout_marginLeft="70dp"
            android:background="#00E4DFDF"
            android:text="@string/newUser"
            android:textColor="#FFFBFB"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="119dp"
            android:layout_height="49dp"
            android:layout_marginLeft="170dp"
            android:text="@string/signup"
            android:textColor="#40C4FF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"/>


</RelativeLayout>